# bitcoin-becoin

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libbecoinconsensus.pc.in
.tx/: config
build-aux/m4/: becoin_find_bdb48.m4  becoin_qt.m4  becoin_subdir_to_include.m4
contrib/: README.md  becoin-qt.pro  becoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  becoin-qt.install  becoin-qt.lintian-overrides  becoin-qt.protocol  becoind.bash-completion  becoind.desktop  becoind.examples  becoind.install  becoind.lintian-overrides  becoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/init/: README.md  becoind.conf  becoind.init  becoind.openrc  becoind.openrcconf  becoind.service
contrib/linearize/: README.md  (+3 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  becoin-cli-res.rc  becoin-cli.cpp  becoin-tx-res.rc  becoin-tx.cpp  becoind-res.rc  becoind.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  (+80 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  becoin.cpp  becoin.qrc  becoin_locale.qrc  becoinaddressvalidator.cpp  becoinaddressvalidator.h  becoinamountfield.cpp  becoinamountfield.h  becoingui.cpp  becoingui.h  becoinstrings.cpp  becoinunits.cpp  becoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  (+64 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: becoin_af_ZA.ts  becoin_ar.ts  becoin_be_BY.ts  becoin_bg.ts  becoin_ca.ts  becoin_ca@valencia.ts  becoin_ca_ES.ts  becoin_cmn.ts  becoin_cs.ts  becoin_da.ts  becoin_de.ts  becoin_el_GR.ts  becoin_en.ts  becoin_eo.ts  becoin_es.ts  becoin_es_CL.ts  becoin_es_DO.ts  becoin_es_MX.ts  becoin_et.ts  becoin_eu_ES.ts  becoin_fa.ts  becoin_fi.ts  becoin_fr.ts  becoin_gl.ts  becoin_he.ts  becoin_hr.ts  becoin_hu.ts  becoin_id_ID.ts  becoin_it.ts  becoin_ja.ts  becoin_ka.ts  becoin_kk_KZ.ts  becoin_ko_KR.ts  becoin_la.ts  becoin_lt.ts  becoin_lv_LV.ts  becoin_mn.ts  becoin_nb.ts  becoin_nl.ts  becoin_pam.ts  (+64 more)
src/qt/res/: becoin-qt-res.rc
src/qt/res/icons/: bitcoin.icns
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: becoinconsensus.cpp  becoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  becoin-util-test.py  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  (+11 more)
src/test/data/: README.md  bitcoin-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
(+130 files in other folders)
